# pii-intent-classifier-lib

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
demo/: README.md  app.py  requirements.txt
src/pii_intent_classifier/: __init__.py  classifier.py  exceptions.py  preprocessor.py  result.py
tests/: test_classifier_full.py  test_classifier_logic.py  test_preprocessor.py
